syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

enum PlayerRankingType {
  PlayerRankingType_RESEARCH_POINTS = 0;
  PlayerRankingType_RANKING_POINTS = 1;
  PlayerRankingType_U1 = 6;
  PlayerRankingType_U2 = 8;
  PlayerRankingType_POWER_POINTS = 9;
}
